# tiskofy

./: .gitignore  README.md  package.json  vite.config.ts
src/: App.tsx  styles.css.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
